[gd_scene load_steps=4 format=2]

[ext_resource path="res://game_screen/dialog_popup.gd" type="Script" id=1]
[ext_resource path="res://game_screen/dialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=3]

[node name="DialogPopup" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.690196 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 640.0
margin_bottom = 190.0
custom_constants/margin_right = 80
custom_constants/margin_left = 80

[node name="Dialog" parent="VBoxContainer/MarginContainer" instance=ExtResource( 2 )]
margin_left = 80.0
margin_right = 560.0
text = "Some people on '%s' are quite busy ([img]res://assets/texture/icon_lock.tres[/img])."

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 640.0
margin_bottom = 234.0
custom_constants/margin_right = 80
custom_constants/margin_left = 80

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 80.0
margin_right = 560.0
margin_bottom = 40.0
alignment = 2

[node name="DisableHintsButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 206.0
margin_bottom = 40.0
text = "ui_disable_hints"

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 210.0
margin_right = 402.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="OkButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 406.0
margin_right = 480.0
margin_bottom = 40.0
text = "ui_ok"

[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/DisableHintsButton" to="." method="_on_DisableHintsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
